atualizado comandos no readme